src/objects/auHeadquarterInfos__c.object
<CustomObject>
    <fields>
        <fullName>DisplayEndDate__c</fullName>
        <label>Display End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DisplayStartDate__c</fullName>
        <label>Display Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InformationDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Information__c</fullName>
        <label>Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>本部お知らせ</label>
    <nameField>
        <displayFormat>HQI-{0000000}</displayFormat>
        <label>本部おしらせ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>